# asson_election

./: PROGRESS.md  db.sqlite3  main.py  pyproject.toml  requirements.txt
admin_dashboard/: forms.py  urls.py  views.py
config/: settings.py
elections/: views.py
templates/: base.html
templates/admin_dashboard/: dashboard.html  student_management.html
templates/elections/: voter_login.html
templates/voters/: landing_page.html  verify_student.html
voters/: admin.py  forms.py  models.py  views.py
