[project]
name = "asson-election"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django",
    "pillow",
    "django-crispy-forms",
    "crispy-bootstrap5",
    "psycopg2-binary>=2.9.11",
    "dj-database-url>=3.1.0",
]
